syntax = "proto3";

package processorclient;
option go_package="../pkg/gen";

service ClientConnector {
  rpc AddProcess(AddProcessRequest) returns (AddProcessResponse) {}
  rpc SetHandler(SetHandlerRequest) returns (SetHandlerResponse) {}
  rpc Connect (stream Request) returns (stream Response) {}
}

message AddProcessRequest {
  string process = 1;
}

message AddProcessResponse {
  string process_name = 1;
  optional string error = 2;
}

message SetHandlerRequest {
  string process_name = 1;
  string topic_name = 2;
}

message SetHandlerResponse {
  string handler_id = 1;
  optional string error = 2;
}

message ConnectToProcessRequest {
  string process_name = 1;
  string process_id = 2;
}

message ConnectToProcessResponse {
  string process_name = 1;
  string process_id = 2;
  string result = 3;
  optional string error = 4;
}

message StartProcessRequest {
  string process_name = 1;
  repeated Variable variables = 2;
}

message StartProcessResponse {
  string process_name = 1;
  string process_id = 2;
  string result = 3;
  optional string error = 4;
}

message TopicExecute {
  string process_name = 1;
  string process_id = 2;
  string topic_name = 3;
  repeated Message messages = 4;
  repeated Variable variables = 5;
}

message ProcessFinished {
  string process_name = 1;
  string process_id = 2;
  repeated Variable variables = 5;
  optional string error = 4;
}

message ExternalActivation {
  string process_name = 1;
  string process_id = 2;
  string task_name = 3;
  repeated Message messages = 4;
  repeated Variable variables = 5;
}

message TopicComplete {
  string process_name = 1;
  string process_id = 2;
  string topic_name = 3;
  repeated Message messages = 4;
  repeated Variable variables = 5;
  string result = 6;
  optional string error = 7;
}

message SendMessage {
  string process_name = 1;
  string process_id = 2;
  string topic_name = 3;
  repeated Message messages = 4;
  repeated Variable variables = 5;
  string result = 6;
  optional string error = 7;
}

message Request {
  int32 id = 1;
  string msg = 2;
  optional TopicComplete topic_complete = 3;
  optional SendMessage send_message = 4;
  optional ConnectToProcessRequest connect_to_process_request = 5;
  optional StartProcessRequest start_process_request = 6;
  optional ExternalActivation external_activation = 7;
}

message Response {
  int32 id = 1;
  string msg = 2;
  optional ConnectToProcessResponse connect_to_process_response = 3;
  optional StartProcessResponse start_process_response = 4;
  optional TopicExecute topic_execute = 5;
  optional ProcessFinished process_finished = 6;
}

message Field {
  string name = 1;
  string type = 2;
  string value = 3;
}

message Variable {
  string name = 1;
  string type = 2;
  string value = 3;
}

message Message {
  string name = 1;
  repeated Field fields = 2;
}
